Bug 97276 - Cannot select line shape with mouse
Summary: Cannot select line shape with mouse
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.3.2 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.1 target:5.0...
Keywords: bibisected, bisected, regression
: 98078 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-20 13:44 UTC by R. Diez
Modified: 2016-10-25 19:08 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with the line shape that I cannot select (10.14 KB, application/vnd.oasis.opendocument.text)
2016-01-20 13:45 UTC, R. Diez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description R. Diez 2016-01-20 13:44:37 UTC
I managed to add an horizontal red line (a shape) to my document's footer that I cannot delete anymore. I just cannot select it with the mouse. If I add another line shape next to it, it works fine.

I reported this recently on the mailing list, and Brian Barker confirmed that it works with OpenOffice, and that the line is not a border, but a shape. The line shape does not appear in the navigator window under "Draw objects" either, but I do not know if it actually should.

I am attaching the document where this problem occurs. I stripped the contents down to a couple of text lines that describe the problem.

I tested this on Linux. On Windows, I reproduced it too with the very latest released version 5.0.4.2.
Comment 1 R. Diez 2016-01-20 13:45:19 UTC
Created attachment 122116 [details]
Document with the line shape that I cannot select
Comment 2 Buovjaga 2016-01-25 12:59:37 UTC
Repro.

I can select it in 4.3

Win 7 Pro 64-bit Version: 5.2.0.0.alpha0+
Build ID: 6b65a0e83c4798f117be61af91dbaebdc85e94b7
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-21_03:41:08
Locale: fi-FI (fi_FI)

4.3.0.1
Comment 3 raal 2016-01-26 13:42:46 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one? Thanks
 4a101ce68b02931a5486f32d1eb7acddbd13268d is the first bad commit
commit 4a101ce68b02931a5486f32d1eb7acddbd13268d
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Jul 29 15:44:27 2015 -0700

    source d1046e7c3f66e5f3384ee1ef534ef28346702fc6

    source d1046e7c3f66e5f3384ee1ef534ef28346702fc6
author	Caolán McNamara <caolanm@redhat.com>	2015-07-15 09:10:25 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-07-15 12:11:14 (GMT)
commit d1046e7c3f66e5f3384ee1ef534ef28346702fc6 (patch)
Comment 4 Commit Notification 2016-01-26 15:35:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad99c633908f7c70d06812ebfb4e0696666f0158

Resolves: tdf#97276 don't clip out line if the underlying page size is unknown

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-01-26 15:39:16 UTC
page claims to be 0 wide/high at that point. Easiest just to only apply the emergency clip with the page isn't 0x0
Comment 6 Commit Notification 2016-01-26 15:40:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38b362c58abd0df654665956ffc751d40cfb67ab&h=libreoffice-5-1

Resolves: tdf#97276 don't clip out line if the underlying page size is unknown

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2016-02-02 17:23:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f9a61e877d79cce1f99c05a9c1598a029bf2c1c&h=libreoffice-5-0

Resolves: tdf#97276 don't clip out line if the underlying page size is unknown

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-02-02 23:27:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b10af3417cb3cf8d99f30ff67661fa615f3bd56c&h=libreoffice-5-0-5

Resolves: tdf#97276 don't clip out line if the underlying page size is unknown

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2016-02-22 15:11:33 UTC
*** Bug 98078 has been marked as a duplicate of this bug. ***