Resolves: tdf#97276 don't clip out line if the underlying page size is unknown

Change-Id: I77d88d8020e9ac26bd6b7277e6d8afefed5e3ee7
(cherry picked from commit ad99c633908f7c70d06812ebfb4e0696666f0158)
(cherry picked from commit 38b362c58abd0df654665956ffc751d40cfb67ab)
Reviewed-on: https://gerrit.libreoffice.org/21814
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 5f9a61e877d79cce1f99c05a9c1598a029bf2c1c)
Reviewed-on: https://gerrit.libreoffice.org/22058
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: David Ostrovsky <david@ostrovsky.org>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>